WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100716
[chromium] Null-check WebViewImpl::m_client before calling invalidateRect() on it
https://bugs.webkit.org/show_bug.cgi?id=100716
Summary
[chromium] Null-check WebViewImpl::m_client before calling invalidateRect() o...
James Robinson
Reported
2012-10-29 18:23:40 PDT
[chromium] Null-check WebViewImpl::m_client before calling invalidateRect() on it
Attachments
Patch
(1.41 KB, patch)
2012-10-29 18:24 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-10-29 18:24:19 PDT
Created
attachment 171353
[details]
Patch
James Robinson
Comment 2
2012-10-29 18:24:46 PDT
WebPageSerializerTest.MultipleFrames is crashing due to this.
WebKit Review Bot
Comment 3
2012-10-29 19:29:10 PDT
Comment on
attachment 171353
[details]
Patch Rejecting
attachment 171353
[details]
from commit-queue. New failing tests: animations/suspend-resume-animation-events.html Full output:
http://queues.webkit.org/results/14641297
WebKit Review Bot
Comment 4
2012-10-29 20:50:14 PDT
Comment on
attachment 171353
[details]
Patch Clearing flags on attachment: 171353 Committed
r132871
: <
http://trac.webkit.org/changeset/132871
>
WebKit Review Bot
Comment 5
2012-10-29 20:50:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug