[chromium] Null-check WebViewImpl::m_client before calling invalidateRect() on it https://bugs.webkit.org/show_bug.cgi?id=100716

Patch by James Robinson <jamesr@chromium.org> on 2012-10-29
Reviewed by Dirk Pranke.

This check was accidentally removed in r132862 and the value is null in at least some unit tests.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::invalidateRect):

Canonical link: https://commits.webkit.org/118755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132871 268f45cc-cd09-0410-ab3c-d52691b4dbfc